@@ -19,7 +19,6 @@
 #ifndef _KATE_EXPORTACTION_H_
 #define _KATE_EXPORTACTION_H_
 
-#include "kateglobal.h"
 #include "../interfaces/document.h"
 
 #include <kaction.h>
