@@ -22,8 +22,6 @@
 #ifndef __kate_factory_h__
 #define __kate_factory_h__
 
-#include "kateglobal.h"
-
 #include <kparts/factory.h>
 #include <ktrader.h>
 
