@@ -20,7 +20,6 @@
 #ifndef _KATEVIEW_HIGHLIGHTACTION_H_
 #define _KATEVIEW_HIGHLIGHTACTION_H_
 
-#include "kateglobal.h"
 #include "../interfaces/document.h"
 
 #include <kaction.h>
